plugins {
    id 'java'
    id "maven-publish"
    id 'java-library'
    id 'me.champeau.mrjar' version "0.1"
}

apply from: 'https://raw.githubusercontent.com/UnRealDinnerbone/GradleHelpers/helpers/base.gradle'

repositories {
    maven {
        url "https://libraries.minecraft.net"
    }
}


dependencies {
    api("com.unrealdinnerbone:UnRealLib-gson:${getVersion()}")
}

allprojects {
    configurations.configureEach {
        resolutionStrategy.dependencySubstitution {
            substitute module("com.unrealdinnerbone:UnRealLib-gson") using project(":UnRealLib-gson") because "We are in Dev"
            substitute module("com.unrealdinnerbone:UnRealLib-core") using project(":UnRealLib-core") because "We are in Dev"
        }
    }
}


compileJava {
    options.release = 17
}

